# omni_robot_gazebo

./: README.md  install_model.sh
commander/scripts/: normal_mode.py
omni_robot_control/launch/: omni_robot_remote.launch
omni_robot_control/scripts/: kinematics.py  remote.py
omni_robot_description/robots/: omni_robot_v2.urdf.xacro
omni_robot_description/urdf/base/: base_v1.gazebo.xacro  base_v1.urdf.xacro
omni_robot_description/urdf/base_layer/: base_layer.gazebo.xacro  base_layer.urdf.xacro
omni_robot_description/urdf/laser/: laser.gazebo.xacro  laser.urdf.xacro
omni_robot_description/urdf/roller/: roller.transmission.xacro  roller.urdf.xacro
omni_robot_gazebo/: CMakeLists.txt
omni_robot_gazebo/launch/: omni_empty_world.launch  omni_mapping.launch  omni_maze.launch  spawn.launch  spawn_v2.launch
omni_robot_gazebo/model/maze/: model.sdf
omni_robot_gazebo/rviz/: omni_robot_mapping.rviz
omni_robot_gazebo/src/: omni_odometry.cpp
omni_robot_gazebo/worlds/: maze.world
omni_robot_navigation/: CMakeLists.txt  package.xml
omni_robot_navigation/launch/: move_base.launch  omni_robot_navigation.launch  omni_robot_navigation_rviz.launch
omni_robot_navigation/param/: dwa_local_planner_params.yaml
omni_robot_navigation/rviz/: omni_robot_navigation.rviz
omni_robot_navigation/scripts/: navigation_sm.py  set_goal_topic.py
omni_robot_navigation/src/: set_goal.cpp  set_goal2.cpp
omni_robot_slam/: CMakeLists.txt  package.xml
omni_robot_slam/launch/: omni_robot_gmapping.launch
omni_robot_slam/rviz/: omni_robot_gmapping.rviz
(+2 files in other folders)
